--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ body {
   padding-top: 40px;
   padding-bottom: 140px;
   color: #ffffff;
-  background-color: #140435;
+  background-color: #CB2580;
   background-image: url("../img/sec1__bg.png");
   background-repeat: no-repeat;
   background-position: center top;
@@ -149,7 +149,7 @@ body {
   width: 250px;
   font-weight: bold;
   font-size: 1.2em;
-  background: #7a016a;
+  background: #CB2580;
   color: white;
   box-shadow: 0 2em 4em #fff;
   padding: 7px;
@@ -188,7 +188,7 @@ body {
   width: 250px;
   font-weight: bold;
   font-size: 1.2em;
-  background: #7a016a;
+  background: #CB2580;
   color: white;
   box-shadow: 0 2em 4em #fff;
   padding: 7px;
@@ -204,9 +204,24 @@ body {
 .sec1 .sec2__right {
   display: none;
 }
+.sec2__list ul li {
+  list-style: none;
+}
+.sec2__list ul li::before {
+  content: "\2023";
+  color: #fdbf0b;
+  font-size: 2em;
+  right: 0%;
+  top: 5px !important;
+  position: relative;
+  margin-left: 9px;
+}
 
 .sec2 {
   position: relative;
+  height: 100%;
+  padding: 20px 0 20px 0;
+  margin-bottom: 60px;
 }
 .sec2__list {
   direction: rtl;
@@ -265,27 +280,23 @@ body {
   font-weight: 700;
   font-size: 40px;
   font-family: "El Messiri", sans-serif;
-  color: #7a016a;
+  color: #CB2580;
   text-transform: uppercase;
   direction: rtl;
 }
-
 .title div {
   font-size: 70px;
 }
-
 .sec2__rose {
   position: absolute;
   top: 50px;
   right: -140px;
 }
-
 .sec2__image {
   position: relative;
   z-index: 2;
   max-width: 250px;
 }
-
 .sec2__arrow {
   position: relative;
   z-index: 3;
@@ -303,11 +314,11 @@ body {
 }
 
 .sec2__arrow-i-1 {
-  padding-top: 15px;
+  padding-top: 0px;
   padding-right: 20px;
   padding-bottom: 15px;
   padding-left: 20px;
-  color: #7a016a;
+  color: #CB2580;
   transform: skew(20deg);
   width: 100%;
   text-align: center;
@@ -318,6 +329,8 @@ body {
 .sec2__arrow-text1 {
   transform: skew(-20deg);
   font-size: 2em;
+  position: relative;
+  top: -40px;
 }
 
 .sec2__arrow-i-2 {
@@ -325,7 +338,7 @@ body {
   padding-right: 20px;
   padding-bottom: 15px;
   padding-left: 20px;
-  background-color: #7a016a;
+  background-color: #CB2580;
   transform: skew(-20deg);
 }
 
@@ -344,7 +357,7 @@ body {
   font-size: 20px;
   font-family: "El Messiri", sans-serif;
   text-align: center;
-  color: #7a016a;
+  color: #CB2580;
   background: url("../img/dash.png") no-repeat 0 0;
   background-size: contain;
 }
@@ -436,7 +449,7 @@ body {
 
 .sec3 .title {
   color: #ffffff;
-  text-shadow: 3px 3px 0 #7a016a;
+  text-shadow: 3px 3px 0 #CB2580;
 }
 
 .sec3 p {
@@ -455,7 +468,7 @@ body {
 
 .sec3__list {
   padding-left: 0;
-  color: #7a016a;
+  color: #CB2580;
   counter-reset: list;
 }
 
@@ -470,7 +483,7 @@ body {
   padding-bottom: 20px;
   padding-left: 75px;
   list-style: none;
-  color: #7a016a;
+  color: #CB2580;
   background-color: #ffffff;
   border-radius: 50px;
   text-align: center;
@@ -490,7 +503,7 @@ body {
   font-size: 50px;
   font-family: "El Messiri", sans-serif;
   color: #fff3af;
-  text-shadow: 3px 3px 0 #7a016a;
+  text-shadow: 3px 3px 0 #CB2580;
   counter-increment: list;
 }
 
@@ -504,7 +517,7 @@ body {
   padding-right: 300px;
   padding-left: 134px;
   color: #ffffff;
-  background: #7a016a;
+  background: #CB2580;
   text-align: center;
   font-weight: bold;
   line-height: 2;
@@ -601,7 +614,7 @@ body {
   margin-bottom: 80px;
   font-size: 20px;
   font-family: "El Messiri", sans-serif;
-  color: #7a016a;
+  color: #CB2580;
   text-align: center;
   direction: rtl;
   line-height: 1.5;
@@ -639,7 +652,7 @@ body {
 .sec4__i-title {
   display: inline;
   font-size: 1.255em;
-  color: #7a016a;
+  color: #CB2580;
   text-transform: uppercase;
   text-align: center;
   direction: rtl;
@@ -831,7 +844,7 @@ img.sec5__rose {
 }
 .forum_sect_para {
   width: 800px;
-  background: #7a016a;
+  background: #CB2580;
 }
 .forum_sect_para p {
   text-align: center;
@@ -848,7 +861,7 @@ img.sec5__rose {
   margin-top: 20px;
 }
 ._child form {
-  background: #7a016a;
+  background: #CB2580;
   width: 300px;
   display: flex;
   justify-content: center;
@@ -890,7 +903,7 @@ form button {
   width: 250px;
   font-weight: bold;
   font-size: 1.2em;
-  background: #7a016a;
+  background: #CB2580;
   color: white;
   box-shadow: 0 2em 4em #fff;
   padding: 7px;
@@ -910,7 +923,7 @@ footer {
 }
 footer hr {
   width: 50%;
-  background: #7a016a;
+  background: #CB2580;
   padding: 7px;
   border-radius: 20px;
 }
@@ -938,7 +951,7 @@ footer p {
   flex-direction: column;
   text-align: center;
   direction: rtl;
-  background-color: #7a016a;
+  background-color: #CB2580;
   background-image: url("../img/sec1__bg.png");
   background-repeat: no-repeat;
   background-position: center top;
@@ -1016,7 +1029,7 @@ footer p {
   width: 300px;
   text-align: center;
   left: 5%;
-  background: #7a016a;
+  background: #CB2580;
   color: #fff;
   font-weight: bold;
   font-size: 1.1em;
@@ -1029,9 +1042,22 @@ footer p {
   display: none;
 }
 @media screen and (max-width: 800px) {
+  .__items {
+    position: relative;
+    top:-10px;
+  }
+  .sec2__product {
+    position: relative;
+    top: -20px;
+    left:-15px;
+  }
+  .sec2__product img {
+    width: 100%;
+    height: 100%;
+  }
   .exacr {
     position: relative;
-    top: 80px !important;
+    top:20px !important;
     display: flex;
   }
   .exacd {
@@ -1069,7 +1095,7 @@ footer p {
     text-align: right;
     font-weight: bold;
     line-height: 2;
-    background: #7a016a;
+    background: #CB2580;
     margin-bottom: 10px;
     color: #fff;
     text-align: center;
