--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,6 @@ body {
   bottom: 0px;
   left: 0;
   z-index: 3;
-  max-width: 230px;
 }
 .sec1__title {
   width: 100%;
@@ -493,7 +492,6 @@ body {
 
 .sec3__prod-img--2 {
   right: 1%;
-  max-width: 230px;
 }
 
 .sec3__prod-img--3 {
@@ -963,12 +961,11 @@ footer p {
   }
   .sec2__product {
     position: relative;
-    top: -20px;
-    left: -15px;
   }
   .sec2__product img {
     width: 100%;
-    height: 100%;
+    height: 300px;
+    object-fit: cover;
   }
   .exacr {
     position: relative;
@@ -1107,9 +1104,11 @@ footer p {
   .sec1__prod {
     width: 100%;
     bottom: -250px;
-    left: 80px;
   }
-
+.sec1__prod img {
+  width: 300px;
+  height: 100%;
+}
   .sec1__rose {
     bottom: -140px;
     left: -110px;
@@ -1213,16 +1212,21 @@ footer p {
   .sec3__woman {
     display: none;
   }
-
+  form img {
+    border-radius: 20px;
+    position: relative;
+  }
   .sec3__prod-img--1 {
     bottom: 0;
     width: 430px;
   }
 
   .sec3__prod-img--2 {
-    width: 210px;
   }
-
+  .sec3__prod-img--2  {
+    width: 100% !important;
+    object-fit: cover;
+  }
   .sec3__prod-img--3 {
     bottom: -20px;
   }
