--- a/assets/css/deltaStyle.css
+++ b/assets/css/deltaStyle.css
@@ -45,7 +45,6 @@ body {
   bottom: 0px;
   left: 0;
   z-index: 3;
-  max-width: 230px;
 }
 .sec1__title {
   width: 100%;
@@ -106,7 +105,6 @@ body {
   align-items: center;
   width: 100%;
   margin: 0 !important;
-  z-index: 999999999999999999999999;
   position: relative;
 }
 ._btn_hnalder button {
@@ -493,7 +491,6 @@ body {
 
 .sec3__prod-img--2 {
   right: 1%;
-  max-width: 230px;
 }
 
 .sec3__prod-img--3 {
@@ -513,7 +510,6 @@ body {
 }
 
 .sec4::before {
-
 }
 
 .sec4 .title {
@@ -1018,13 +1014,33 @@ footer p {
   .howtouse .second_prod {
     background: #fdbf0b;
     color: #fff;
-    margin: 0 10px 0 10px;
+    margin: 0 10px 20px 10px;
+    padding: 0 7px 0 7px;
+    border-radius: 20px;
+    width: 300px;
+  }
+  .second_prod img {
+    width: 100px !important;
+    height: 300px !important;
+    object-fit: cover;
   }
   .howtouse .first_prod {
     background: #fdbf0b;
     color: #fff;
     margin: 0 10px 20px 10px;
-    padding: 0 7px 0 7px ;
+    padding: 0 7px 0 7px;
+    border-radius: 20px;
+    width: 300px;
+  }
+  .first_prod img {
+    width: 200px;
+    object-fit: cover;
+  }
+  .ta7a img {
+    width: 100px;
+  }
+  .ardaf img {
+    width: 200px;
   }
   /*howtouse*/
   .handle_prods {
@@ -1091,13 +1107,15 @@ footer p {
     position: relative;
     left: -5%;
   }
-  
+
   .sec1__prod {
     width: 100%;
     bottom: -250px;
-    left: 80px;
   }
-
+  .sec1__prod img {
+    width: 300px;
+    height: 100%;
+  }
   .sec1__rose {
     bottom: -140px;
     left: -110px;
@@ -1131,10 +1149,12 @@ footer p {
     font-size: 2em !important;
     position: relative;
     top: -10% !important;
+    margin: 0% !important;
   }
   .sec2__dash p {
     position: relative;
     top: -30px;
+    font-size: 1.2em;
   }
   .sec1__list {
     width: 100%;
@@ -1201,16 +1221,23 @@ footer p {
   .sec3__woman {
     display: none;
   }
-
+  form img {
+    border-radius: 20px;
+    position: relative;
+    border-end-end-radius: 0%;
+    border-bottom-right-radius: 0%;
+  }
   .sec3__prod-img--1 {
     bottom: 0;
     width: 430px;
   }
 
   .sec3__prod-img--2 {
-    width: 210px;
   }
-
+  .sec3__prod-img--2 {
+    width: 100% !important;
+    object-fit: cover;
+  }
   .sec3__prod-img--3 {
     bottom: -20px;
   }
@@ -1244,6 +1271,7 @@ footer p {
   .sec4 {
     padding-top: 0px;
     padding-bottom: 30px;
+    margin-top: 40px;
   }
 
   .sec4__subtitle {
@@ -1264,7 +1292,18 @@ footer p {
     float: none;
     margin: 0 auto;
   }
-
+  .w-vulcan--background,
+  .wistia_grid_84_wrapper {
+    z-index: 9999999999;
+  }
+  .vid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10px;
+  }
   .sec4__text {
     padding: 10px;
     text-align: center;
@@ -1272,7 +1311,13 @@ footer p {
     line-height: 2;
     font-size: 1.2em;
   }
-
+  .vid_btn {
+    margin-top: 20px !important;
+  }
+  .vid_btn button {
+    width: 320px !important;
+    border-radius: 0%;
+  }
   .sec4__i-title {
     display: block;
   }
@@ -1299,7 +1344,18 @@ footer p {
     position: relative;
     z-index: 200;
   }
-
+  .sec1::before {
+    content: "";
+    position: absolute;
+    background: url("../img/butt.png") no-repeat;
+    width: 100%;
+    height: 280px;
+    right: -3%;
+    top: 0px;
+    background-position: right;
+    background-size: contain;
+    z-index: 9999;
+  }
   .orange__title b,
   .orange__title span {
     font-size: 35px;
