--- a/assets/css/deltaStyle.css
+++ b/assets/css/deltaStyle.css
@@ -1,6 +1,3 @@
-img {
-  max-width: 100%;
-}
 body {
   line-height: 1.2;
   font-family: "El Messiri", sans-serif;
@@ -22,7 +19,6 @@ body {
 .sec1 {
   position: relative;
   padding-top: 40px;
-  padding-bottom: 140px;
   color: #ffffff;
   background-color: #cb2580;
   background-image: url("../img/sec1__bg.png");
@@ -40,12 +36,7 @@ body {
   left: -280px;
   z-index: 3;
 }
-.sec1__prod {
-  position: absolute;
-  bottom: 0px;
-  left: 0;
-  z-index: 3;
-}
+
 .sec1__title {
   width: 100%;
   max-width: 400px;
@@ -361,7 +352,7 @@ body {
 
 .sec3 {
   position: relative;
-  padding-top: 100px;
+  padding-top: 20px;
   padding-bottom: 65px;
   background-color: #0b073a;
   background-image: url("../img/sec3__rose.png");
@@ -429,21 +420,7 @@ body {
   counter-increment: list;
 }
 
-.sec3__warning {
-  position: relative;
-  box-sizing: border-box;
-  width: 100%;
-  max-width: 908px;
-  margin-bottom: 30px;
-  padding: 20px;
-  padding-right: 300px;
-  padding-left: 134px;
-  color: #ffffff;
-  background: #cb2580;
-  text-align: center;
-  font-weight: bold;
-  line-height: 2;
-}
+
 .sec3__warning-text {
   position: relative;
   left: -10%;
@@ -1097,7 +1074,6 @@ footer p {
 
   .sec1 {
     padding-top: 15px;
-    padding-bottom: 185px;
   }
   .sec1__title span {
     position: relative;
@@ -1106,15 +1082,6 @@ footer p {
   .el {
     position: relative;
     left: -5%;
-  }
-
-  .sec1__prod {
-    width: 100%;
-    bottom: -250px;
-  }
-  .sec1__prod img {
-    width: 300px;
-    height: 100%;
   }
   .sec1__rose {
     bottom: -140px;
@@ -1167,7 +1134,14 @@ footer p {
   .sec1__title {
     margin: 0 auto 30px;
   }
-
+  .sect_1prod {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+  }
+ 
   .sec1__list li {
     padding-left: 0px;
     font-size: 1.2em;
@@ -1233,8 +1207,6 @@ footer p {
   }
 
   .sec3__prod-img--2 {
-  }
-  .sec3__prod-img--2 {
     width: 100% !important;
     object-fit: cover;
   }
@@ -1264,8 +1236,6 @@ footer p {
   }
 
   .sec3 {
-    padding-bottom: 145px;
-    padding-top: 125px;
   }
 
   .sec4 {
@@ -1283,7 +1253,10 @@ footer p {
   .sec4__subtitle b {
     font-size: 20px;
   }
-
+  .sect_1prod {
+      background: #0b073a;
+      width: 100%;
+  }
   .sec4__item {
     width: 100%;
     margin-bottom: 20px;
